--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,7 +12,7 @@ jobs:
       
     - name: Build and tag Docker image
       run: |
-        sudo -S docker build -t mywebsite08
+        sudo -S docker build -t mywebsite08 .
         sudo -S docker save mywebsite08:latest | gzip > mywebsite08.tar.gz
         
     - name: Transfer Docker image to EC2
