--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -33,14 +33,10 @@ jobs:
         SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
         HOST: ${{ secrets.HOST }}
       run: |
-        # Setup SSH key and permissions
-        mkdir -p ~/.ssh
-        echo "$SSH_PRIVATE_KEY" | tr -d '\r' > ~/.ssh/id_rsa
-        chmod 600 ~/.ssh/id_rsa
-        ssh-keyscan -H "$HOST" >> ~/.ssh/known_hosts
         # SSH and Docker commands to run on EC2
-        ssh -i ~/.ssh/id_rsa ubuntu@$HOST '
+        ssh -i ~/.ssh/id_rsa -p 22 ubuntu@$HOST '
           sudo -S docker load < /tmp/mywebsite08.tar.gz
           sudo -S docker stop mywebsite08 || true
           sudo -S docker rm mywebsite08 || true
           sudo -S docker run -itd -p 8082:80 mywebsite08:latest
+        '
