--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,6 +14,16 @@ jobs:
       run: |
         sudo -S docker build -t mywebsite08 .
         sudo -S docker save mywebsite08:latest | gzip > mywebsite08.tar.gz
+
+    - uses: mr-smithers-excellent/docker-build-push@v6
+      name: Build & push Docker image
+      with:
+        image: gitforcodedash/demo
+        tags: v1, latest
+        registry: docker.io
+        dockerfile: Dockerfile.ci
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }} 
         
     - name: Transfer Docker image to EC2
       env:
