--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,6 +14,7 @@ jobs:
       run: |
         sudo -S docker build -t mywebsite08 .
         sudo -S docker save mywebsite08:latest | gzip > mywebsite08.tar.gz
+        sudo chmod 777 /var/run/docker.sock
 
     - uses: mr-smithers-excellent/docker-build-push@v6
       name: Build & push Docker image
